--- a/cs/suite/chrome/common/help/certs_help.xhtml
+++ b/cs/suite/chrome/common/help/certs_help.xhtml
@@ -11,7 +11,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Správce certifikátů</title>
-<link rel="stylesheet" href="chrome://help/locale/helpFileLayout.css"
+<link rel="stylesheet" href="helpFileLayout.css"
   type="text/css"/>
 </head>
 <body>
@@ -242,7 +242,7 @@
 <li><strong>Povolit FIPS</strong>: Zapíná a vypíná režim FIPS. Více informací, viz <a href="using_certs_help.xhtml#enable_fips_mode">Povolit režim FIPS</a>.</li>
 </ul>
 
-<p>Copyright &copy; 2003-2007 The Mozilla Foundation.</p>
+<p>&copyright.string;</p>
 
 </body>
 </html>
