--- a/cs/suite/chrome/common/help/certs_prefs_help.xhtml
+++ b/cs/suite/chrome/common/help/certs_prefs_help.xhtml
@@ -11,7 +11,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>Soukromí &amp; Zabezpečení - Nastavení certifikátů</title>
-	<link rel="stylesheet" type="text/css" href="chrome://help/locale/helpFileLayout.css" />
+	<link rel="stylesheet" type="text/css" href="helpFileLayout.css" />
 </head>
 
 <body>
@@ -48,8 +48,8 @@
 Prohlížeče v případech, kdy má k dispozici více než jeden použitelný certifikát:</p>
 <ul>
 	<li><strong>Vybírat automaticky</strong>: Zvolte na tuto volbu,
-pokud chcete, aby Prohlížeč vybral certifikát, aniž by se vás ptal. Tato volba je výchozí.</li>
-	<li><strong>Vždy se dotázat</strong>: Zvolte na tuto volbu,
+pokud chcete, aby Prohlížeč vybral certifikát, aniž by se vás ptal.</li>
+	<li><strong>Vždy se dotázat</strong>: Zvolte tuto volbu,
 pokud chcete, aby vám Prohlížeč dal vždy na výběr, jaký certifikát použít v okamžiku, kdy
 webová stránka certifikát požaduje.</li>
 </ul>
@@ -72,7 +72,7 @@ bezpečnostní zařízení jako třeba smart cards.</p>
 <p>Pro prohlížení nebo změnu nastavení uložených certifikátů klepněte na tlačítko Správa bezpečnostních zařízení.</p>
 
 
-<p>Copyright &copy; 2003-2007 The Mozilla Foundation.</p>
+<p>&copyright.string;</p>
 
 </body>
 </html>
