--- a/cs/suite/chrome/common/help/cs_priv_prefs_popup.xhtml
+++ b/cs/suite/chrome/common/help/cs_priv_prefs_popup.xhtml
@@ -11,7 +11,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Nápověda k vyskakovacím oknům</title>
-<link rel="stylesheet" href="chrome://help/locale/helpFileLayout.css"
+<link rel="stylesheet" href="helpFileLayout.css"
   type="text/css"/>
 </head>
 <body>
@@ -26,7 +26,11 @@
 
 <p>&brandShortName; vám umožňuje kontrolovat oba druhy vyskakovacích oken pomocí sekce <a href="#privacy_and_security_preferences_popup_windows">Předvolby Soukromí &amp; Zabezpečení - Vyskakovací okna</a>. Blokování vyskakovacích oken je standardně vypnuto. Aby se vyskakovací okna již neobjevovala, musíte funkci na blokování zapnout.</p>
 
-<p>Když je vyskakovací okno blokováno, můžete nastavit balík &brandShortName; tak, aby přehrál zvuk či zobrazil ikonku <img src="chrome://navigator/skin/icons/popup-blocked.png" alt="Popup control icon"/> ve stavovém řádku. Tuto ikonku můžete použít pro přidání aktuální webové stránky do seznamu výjimek, čímž bude mít tato stránka příště povolené vyskakovací okno zobrazit.</p>
+<p>Když je vyskakovací okno blokováno, můžete nastavit balík &brandShortName; tak, 
+aby přehrál zvuk či zobrazil ikonku <img src="chrome://navigator/skin/icons/popup-blocked.png" 
+alt="Popup control icon"/> ve stavovém řádku <!--translate-->or a notification bar at the top of the website
+  content area, or any combination of the above. You can use the icon or the bar<!--end translate--> pro přidání aktuální 
+  webové stránky do seznamu výjimek, čímž bude mít tato stránka příště povolené vyskakovací okno zobrazit.</p>
 
 <p><strong>Potlačení vyskakovacích oken může narušit funkci některých stránek</strong>: Některé servery, například bankovní, používají vyskakovací okna na důležité funkce. Zakázání takových oken způsobí zablokování takových funkcí. Pokud chcete povolit zvoleným serverům používat vyskakovací okna, ale zároveň je zakázat všem ostatním, můžete tyto servery přidat do seznamu povolených serverů. Pro bližší informace si přečtěte kapitolu
   <a href="#privacy_and_security_preferences_popup_windows">Předvolby Soukromí &amp; Zabezpečení - Vyskakovací okna</a>.</p>
@@ -57,21 +61,37 @@
 <h3>Pokud bude vyskakovací okno zablokováno</h3>
 
 <ul>
-<li><strong>Přehrát zvuk</strong>: Pokud chcete přehrát zvuk pokaždé, když se zablokuje vyskakovací okno, zvolte tuto možnost a zadejte umístění zvukového souboru.
+<li><strong>Přehrát zvuk</strong>: Pokud chcete přehrát zvuk pokaždé, když se zablokuje 
+vyskakovací okno, zvolte tuto možnost a zadejte umístění zvukového souboru.
 <ul>
 <li><strong>Vybrat</strong>: Použijte na vyhledání souboru místo ručního napsání cesty do editačního pole.</li>
 <li><strong>Ukázka</strong>: Klepnutím na toto tlačítko přehrajete zvolený zvuk.</li>
   </ul></li>
 <li><strong>Zobrazit ikonu ve stavovém řádku prohlížeče</strong>: Zvolte pro zobrazení ikony <img src="chrome://navigator/skin/icons/popup-blocked.png"
   alt="Popup control icon"/> ve stavové liště prohlížeče. Ikona vás upozorní, že bylo vyskakovací okno zablokováno.
-  <strong>Poznámka</strong>: Když se ikonka <img src="chrome://navigator/skin/icons/popup-blocked.png" alt="Popup control icon"/> zobrazí, zůstane viditelná do té doby, dokud nepřejdete na jiný server.
+  <strong>Poznámka</strong>: Když se ikonka <img src="chrome://navigator/skin/icons/popup-blocked.png" 
+  alt="Popup control icon"/> zobrazí, zůstane viditelná do té doby, dokud nepřejdete na jiný server.
+  </li>
+    <li><strong>Zobrazit informační lištu v horní části obsahu stránky</strong>:
+    <!--translate-->Select this to display a notification bar above the website content area
+    whenever a popup is blocked. In the bar, use the Preferences button to choose
+    how to handle popups from that website.<!--end translate-->
   </li></ul>
 
-<p><strong>Použití ikony vyskakovacích oken na povolení oken z tohoto serveru</strong>: Tuto ikonku můžete použít na rychlé přidání serveru do seznamu povolených serverů. Klepnutím na ikonku <img src="chrome://navigator/skin/icons/popup-blocked.png" alt="Popup control icon"/> se zobrazí seznam povolených serverů. Aktuální server je vždy předvyplněný. Klepnutím na tlačítko Přidat a následným klepnutím na tlačítko OK potvrdíte přidání.</p>
+<p><strong>Použití ikony vyskakovacích oken na povolení oken z tohoto serveru</strong>: 
+Tuto ikonku nebo informační lištu můžete použít na rychlé přidání serveru do seznamu povolených serverů. 
+Klepnutím na ikonku <img src="chrome://navigator/skin/icons/popup-blocked.png" 
+alt="Popup control icon"/> se zobrazí seznam povolených serverů. Aktuální server je vždy 
+předvyplněný. Klepnutím na tlačítko Přidat a následným klepnutím na tlačítko OK potvrdíte přidání. 
+<!--translate-->Similarly you can use the notification bar to allow popups from the current
+  website or open the list of allowed websites through Manage Popups. Just
+  click the Preferences button at the right end of the notification bar.<!--end translate--></p>
 
-<p><strong>Poznámka</strong>: Blokováním vyskakovacích oken nemusí vždy fungovat a může narušit funkčnost některých stránek. Pro další informace o blokování vyskakovacích oken zvolte kapitolu <a href="#controlling_popups">Ovládání vyskakovacích oken</a>.</p>
+<p><strong>Poznámka</strong>: Blokováním vyskakovacích oken nemusí vždy fungovat a může 
+narušit funkčnost některých stránek. Pro další informace o blokování vyskakovacích oken zvolte 
+kapitolu <a href="#controlling_popups">Ovládání vyskakovacích oken</a>.</p>
 
-<p>Copyright &copy; 2003-2007 The Mozilla Foundation.</p>
+<p>&copyright.string;</p>
 
 </body>
 </html>
