--- a/cs/suite/chrome/common/help/developer_tools.xhtml
+++ b/cs/suite/chrome/common/help/developer_tools.xhtml
@@ -11,8 +11,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Nástroje pro vývoj webových aplikací</title>
-<link rel="stylesheet" type="text/css"
-  href="chrome://help/locale/helpFileLayout.css"/>
+<link rel="stylesheet" type="text/css" href="helpFileLayout.css" />
 </head>
 
 <body>
@@ -23,7 +22,12 @@
 
 <ul class="separate">
   <li id="js_console">
-    <strong>Chybová konzola</strong>: okno konzole zobrazuje upozornění, varování a chyby JavaScriptu, které se vyskytly při chodu webových aplikací v balíku &brandShortName;.</li>
+    <strong>Chybová konzola</strong>: <!--translate-->a console window that reports problems
+    with <a href="glossary.xhtml#javascript">JavaScript</a> and CSS code in
+    Web applications and the &brandShortName; application itself. By default, 
+    CSS parsing errors and JavaScript errors are displayed. The console can 
+    also be used to display logged messages from <a href="glossary.xhtml#xul">
+    XUL</a> and JavaScript code.<!--end translate--></li>
   <li id="inspector">
     <strong>DOM Inspektor</strong>: nástroj, který může být použit k prohlížení a editaci DOM v jakémkoliv webovém dokumentu či XUL aplikaci.
 
@@ -64,7 +68,7 @@
   </li>
 </ul>
 
-<p>Copyright &copy; 2003-2007 The Mozilla Foundation.</p>
+<p>&copyright.string;</p>
 
 </body>
 </html>
