--- a/cs/suite/chrome/common/help/forieusers.xhtml
+++ b/cs/suite/chrome/common/help/forieusers.xhtml
@@ -11,7 +11,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Pro uživatele aplikace Microsoft Internet Explorer</title>
-<link rel="stylesheet" href="chrome://help/locale/helpFileLayout.css"
+<link rel="stylesheet" href="helpFileLayout.css"
   type="text/css"/>
 </head>
 <body>
@@ -20,7 +20,6 @@
 
 <p>Pokud jste doteď používali prohlížeč Microsoft&reg; Internet Explorer zjistíte, že je snadné začít používat aplikaci &brandShortName; pro <a href="nav_help.xhtml#browsing_the_web">prohlížení webových stránek</a>, <a href="mail_help.xhtml">správu své pošty</a> a mnoho dalších věcí.</p>
 
-<p><strong>Poznámka</strong>: Tato informace platí pouze pro aplikaci &brandShortName; ve Windows, Mac OS, Solaris a HP-UX.</p>
 
 <div class="contentsBox">V této kapitole:
 <ul>
@@ -40,12 +39,12 @@
 <th>&brandShortName;</th>
 </tr>
 </thead>
-<tbody>
+<tbody class="tbody-default">
 <tr>
 <td>Možnosti Internetu</td>
 <td><a href="cs_nav_prefs_navigator.xhtml">Předvolby</a></td>
 </tr>
-<tr class="even">
+<tr>
 <td>Dočasné soubory Internetu</td>
 <td><a href="nav_help.xhtml#changing_cache_settings">Vyrovnávací disková paměť</a></td>
 </tr>
@@ -53,7 +52,7 @@
 <td>Oblíbené</td>
 <td><a href="customize_help.xhtml#bookmarks">Záložky</a></td>
 </tr>
-<tr class="even">
+<tr>
 <td>Panel s adresou</td>
 <td><a href="nav_help.xhtml#moving_to_another_page">Adresní řádek</a></td>
 </tr>
@@ -61,7 +60,7 @@
 <td>Aktualizovat</td>
 <td><a href="nav_help.xhtml#stopping_and_reloading">Obnovit</a></td>
 </tr>
-<tr class="even">
+<tr>
 <td>Panel odkazy</td>
 <td><a href="customize_help.xhtml#personal_toolbar">Lišta záložek</a></td>
 </tr>
@@ -79,13 +78,16 @@
 <h2 id="browser_features">Funkce prohlížeče</h2>
 
 <ul>
-<li><strong><a href="nav_help.xhtml#using_tabbed_browsing">Prohlížení v panelech</a></strong>: 
+	<li><strong><a href="nav_help.xhtml#using_tabbed_browsing">Prohlížení v panelech</a></strong>: 
   Místo otevírání samostatných oken prohlížeče pro každou navštívenou stránku můžete otevřít více stránek v panelech v rámci jednoho okna Prohlížeče a mezi nimi přepínat. Též můžete nastavit <a href="cs_nav_prefs_navigator.xhtml#navigator">skupinu panelů jako svoji domovskou stránku</a>.</li>
-<li><strong><a href="cs_priv_prefs_popup.xhtml">Ovládání vyskakovacích oken</a></strong>: Umožní vám povolit nebo potlačit vyskakovací okna, která se svévolně otevírají na webových stránkách.</li>
-<li><strong><a href="customize_help.xhtml#sidebar">Postranní lišty</a></strong>:	Přizpůsobte si aplikaci &brandShortName; a využijte pomůcky jako jsou novinky, přehled akcii, vaše záložky, historie a mnohé další možnosti.</li>
-<li><strong><a href="profiles_help.xhtml#managing_profiles">Správa profilů</a></strong>: Vytvořte si různé profily. Každý s vlastními záložkami, předvolbami, nastavením pošty apod. To je užitečné tehdy, pokud musíte sdílet aplikaci &brandShortName; s více lidmi na jednom PC, ale nechcete oddělit vaše osobní a pracovní nastavení.</li>
-<li><strong><a href="using_priv_help.xhtml">Správce cookies</a></strong>: Umožní vám nastavit, co &brandShortName; udělá, když přijme cookie. Vše díky podpoře <a href="using_priv_help.xhtml#privacy_settings">standardu pro soukromí P3P</a>.</li>
-<li><strong><a href="using_priv_help.xhtml#managing_images">Správce obrázků</a></strong>: Umožní vám zablokovat obrázky z určených stránek. To je užitečné tehdy, pokud potřebujete snížit čas potřebný na načítání stránek nebo tehdy, když chcete potlačit reklamy.</li></ul>
+	<li><strong><a href="cs_priv_prefs_popup.xhtml">Ovládání vyskakovacích oken</a></strong>: Umožní vám povolit nebo potlačit vyskakovací okna, která se svévolně otevírají na webových stránkách.</li>
+	<li><strong><a href="customize_help.xhtml#sidebar">Postranní lišty</a></strong>:	Přizpůsobte si aplikaci &brandShortName; a využijte pomůcky jako jsou novinky, přehled akcii, vaše záložky, historie a mnohé další možnosti.</li>
+	<li><strong><a href="profiles_help.xhtml#managing_profiles">Správa profilů</a></strong>: Vytvořte si různé profily. Každý s vlastními záložkami, předvolbami, nastavením pošty apod. To je užitečné tehdy, pokud musíte sdílet aplikaci &brandShortName; s více lidmi na jednom PC, ale nechcete oddělit vaše osobní a pracovní nastavení.</li>
+	<li><strong><a href="using_priv_help.xhtml">Správce cookies</a></strong>: <!--translate--> Lets
+    you view detailed information about each cookie and remove cookies you
+    don&apos;t want to be stored on your computer. You can also control which
+    websites are allowed to store cookies on your computer.<!--end translate--></li>
+	<li><strong><a href="using_priv_help.xhtml#managing_images">Správce obrázků</a></strong>: Umožní vám zablokovat obrázky z určených stránek. To je užitečné tehdy, pokud potřebujete snížit čas potřebný na načítání stránek nebo tehdy, když chcete potlačit reklamy.</li></ul>
 
 <h2 id="other_features">Další funkce</h2>
 
@@ -101,7 +103,7 @@
 
 <p>Všimněte si, že Microsoft Internet Explorer a &brandShortName; používají mnohé společné klávesové zkratky. Pro úplný přehled zkratek se podívejte do kapitoly <a href="shortcuts.xhtml">Klávesové zkratky aplikace &brandShortName;</a>.</p>
 
-<p>Copyright &copy; 2003-2007 The Mozilla Foundation.</p>
+<p>&copyright.string;</p>
 
 </body>
 </html>
