--- a/cs/suite/chrome/common/help/help_help.xhtml
+++ b/cs/suite/chrome/common/help/help_help.xhtml
@@ -2,16 +2,13 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"[
-  <!ENTITY % brandDTD SYSTEM "chrome://branding/locale/brand.dtd" >
-  <!ENTITY % regionDTD SYSTEM "chrome://global-region/locale/region.dtd" >
-  %brandDTD;
-  %regionDTD;
 ]>
+
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Jak používat nápovědu</title>
-	<link rel="stylesheet" type="text/css" href="chrome://help/locale/helpFileLayout.css"/>
+	<link rel="stylesheet" type="text/css" href="helpFileLayout.css"/>
 </head>
 
 <body>
@@ -33,17 +30,13 @@
 
 <h2 id="finding_the_topic_you_want">Panely nápovědy</h2>
 
-	<p>V levé části okna Nápovědy je rám s několika panely, které vám umožňují různým způsobem nalézt hledané téma:</p>
 <ul>
-		<li><strong>Obsah</strong> Obsahuje seznam kapitol nápovědy.<br/>
-		  Pro zobrazení kapitoly klepněte kurzorem myši na její název. Je-li vlevo u názvu malý trojúhelníček, můžete dvojklikem na název kapitoly rozvinout seznam podkapitol.</li>
-		 <li><strong>Hledat</strong> Umožní vám prohledat soubory s nápovědou.<br/>
-		  Pro vyhledání zadejte slovo nebo frázi do editačního pole. Pro zobrazení přidruženého tématu nápovědy klepněte kurzorem myši na nalezené záznamy.
-		  <p>Jestliže výsledek hledání neobsahuje vaše téma, změňte vyhledávání na jinou kombinaci nebo počet slov</p>.</li>
-		 <li><strong>Rejstřík</strong> Obsahuje abecedně řazený seznam témat v nápovědě.<br/>
-     Pro zobrazení tématu nápovědy klepněte kurzorem myši na vybranou položku rejstříku.</li>
-		 <li><strong>Slovník</strong> Obsahuje abecedně řazený seznam pojmů používaných v nápovědě.<br/>
-     Pro zobrazení definice klepněte kurzorem myši na vybraný pojem.</li>
+	<li><!--translate-->Main topics are listed in the left sidebar. Click a topic to read about
+    it. To see its subtopics, double-click or click the <span class="noMac">
+    plus-sign</span><span class="mac">triangle</span> at the left.</li>
+    <li>Type a word or phrase in the search field to display a list of related
+    topics.<!--end translate-->
+    <p>Jestliže výsledek hledání neobsahuje vaše téma, změňte vyhledávání na jinou kombinaci nebo počet slov</p>.</li>
 </ul>
 
 	<p>
@@ -72,7 +65,7 @@
 
 <h2 id="using_help_buttons">Tlačítko Nápověda</h2>
 
-<p>Řada specializovaných oken aplikace &brandShortName; a dialogových oken obsahuje tlačítko <q>Nápověda</q>.</p>
+<p>Řada specializovaných oken aplikace &brandShortName; a dialogových oken obsahuje tlačítko Nápověda.</p>
 
 <p>Klepnete-li na toto tlačítko, otevře se vám nápověda s odpovídajícím tématem.</p>
 
@@ -81,11 +74,11 @@
 
 <ul>
 		<li>Vyhledejte informace, které se vztahují k aplikaci &brandShortName; (nejedná se o vyhledávání na Internetu).</li>
-    <li>Pokuste se rozšířit vaše hledání &mdash; nevyhledávejte příliš specifické termíny, které mohou být řečeny jinak, než pod čím je hledáte.</li>
+        <li>Pokuste se rozšířit vaše hledání &mdash; nevyhledávejte příliš specifické termíny, které mohou být řečeny jinak, než pod čím je hledáte.</li>
 		<li>Vyhněte se přílišné obecnosti. Slova jako &brandShortName; pravděpodobně vrátí všechny stránky nápovědy.</li>
 </ul>
 
-<p>Copyright &copy; 2003-2007 The Mozilla Foundation.</p>
+<p>&copyright.string;</p>
 
 </body>
 </html>
