--- a/cs/suite/chrome/common/help/mail_sec_help.xhtml
+++ b/cs/suite/chrome/common/help/mail_sec_help.xhtml
@@ -9,7 +9,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Podepisování a šifrování e-mailů</title>
-<link rel="stylesheet" href="chrome://help/locale/helpFileLayout.css"
+<link rel="stylesheet" href="helpFileLayout.css"
   type="text/css"/>
 </head>
 <body>
@@ -24,7 +24,7 @@
 <li><a href="#signing_and_encrypting_a_new_message">Podepisování a šifrování nových e-mailů</a></li>
 <li><a href="#reading_signed_and_encrypted_messages">Čtení podepsaných a zašifrovaných e-mailů</a></li>
 <li><a href="#message_security_compose_window">Zabezpečení zprávy - Psaní e-mailu</a></li>
-<li><a href="#message_security_recieved_message">Zabezpečení zprávy - Přijatý e-mail</a></li>
+<li><a href="#message_security_received_message">Zabezpečení zprávy - Přijatý e-mail</a></li>
 </ul>
 </div>
 
@@ -182,7 +182,7 @@
 
 <p>Pro informace o ověřování certifikátů viz. kapitola <a href="using_certs_help.xhtml#controlling_validation">Ověřování platnosti</a>.</p>
 
-<p>Pro zobrazení podrobných informací o stavu zabezpečení zprávy můžete také klepnout na ikonu klíče nebo zámku jak je popsáno v kapitole <a href="#message_security_recieved_message">Zabezpečení zprávy - Přijatý e-mail</a>.</p>
+<p>Pro zobrazení podrobných informací o stavu zabezpečení zprávy můžete také klepnout na ikonu klíče nebo zámku jak je popsáno v kapitole <a href="#message_security_received_message">Zabezpečení zprávy - Přijatý e-mail</a>.</p>
 
 <p>[<a href="#signing_and_encrypting_messages">Návrat na začátek kapitoly</a>]</p>
 
@@ -252,7 +252,7 @@
 
 <p>[<a href="#signing_and_encrypting_messages">Návrat na začátek kapitoly</a>]</p>
 
-<p>Copyright &copy; 2003-2007 The Mozilla Foundation.</p>
+<p>&copyright.string;</p>
 
 </body>
 </html>
