--- a/cs/suite/chrome/common/help/page_info_help.xhtml
+++ b/cs/suite/chrome/common/help/page_info_help.xhtml
@@ -11,7 +11,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Informace o stránce</title>
-<link rel="stylesheet" href="chrome://help/locale/helpFileLayout.css"
+<link rel="stylesheet" href="helpFileLayout.css"
   type="text/css"/>
 </head>
 <body>
@@ -25,8 +25,6 @@
 <p>Většina informací zobrazených na panelech Obecné, Formuláře, Odkazy, Média pochází ze zdrojového (HTML) kódu stránky. Tyto informace nejvíce využijí vývojáři webových stránek a ostatní odborníci.</p>
 
 <p>Více informací o HTML značkách zobrazených v okně Informace o stránce naleznete v online dokumentu <a href="http://www.w3.org/TR/REC-html40/">Specifikace HTML 4.01</a> [Eng].</p>
-
-<p>Panel Zabezpečení zobrazuje informace o <a href="glossary.xhtml#p3p">Platform for Privacy Preferences (P3P)</a> zásadách a stavu zabezpečení webové stránky, kterou máte otevřenu.</p>
 
 <div class="contentsBox">V této kapitole:
 <ul>
@@ -133,8 +131,6 @@ Zobrazení položek v kategorii provedete klepnutím na její jméno:
   <li><strong>Volby</strong>: Toto tlačítko zobrazí stránku ze vzdáleného serveru, která umožní uživateli upravit své osobní údaje uložené na vzdáleném serveru.</li>
 </ul>                                                                           
                                                                                 
-<p><strong>Poznámka</strong>: Webové stránky zveřejňující Zásady soukromí nejsou příliš běžné, proto se vám při zkoumání webových stránek panel s těmito informacemi obvykle nezobrazí.</p>
-
 <h2 id="security_tab">Zabezpečení (panel v dialogovém okně Informace o stránce)</h2>
 
 <p>Klepnete-li na položku Informace o stránce z nabídky Zobrazit a klepnete na panel Média, zobrazí se informace o <a href="glossary.xhtml#authentication">Autorizace</a> a <a href="glossary.xhtml#encryption">Šifrování</a> pro právě zobrazenou stránku. V horní části panelu najdete informace o ověření identity webové stránky a dolní část panelu zobrazuje informace o stupni šifrování spojení.</p>
@@ -171,7 +167,7 @@ Zobrazení položek v kategorii provedete klepnutím na její jméno:
 
 <p>Rychlé otevření panelu Zabezpečení provedete klepnutím na ikonku zámku v pravém dolním rohu prohlížeče. Více informací naleznete v kapitole <a href="using_certs_help.xhtml#checking_security_for_a_web_page">Kontrola zabezpečení webové stránky</a>.</p>
 
-<p>Copyright &copy; 2003-2007 The Mozilla Foundation.</p>
+<p>&copyright.string;</p>
 
 </body>
 </html>
