--- a/cs/suite/chrome/common/help/passwords_help.xhtml
+++ b/cs/suite/chrome/common/help/passwords_help.xhtml
@@ -11,7 +11,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Nastavení hesel</title>
-<link rel="stylesheet" href="chrome://help/locale/helpFileLayout.css"
+<link rel="stylesheet" href="helpFileLayout.css"
   type="text/css"/>
 </head>
 <body>
@@ -145,7 +145,8 @@ mají svoje vlastní heslo.</p>
 
 <h3 id="master_password_timeout">Zneplatnění Hlavního hesla</h3>
 
-<p>Když zadáte nové Hlavní heslo, příště ho budete muset zadat znovu až když bude znovu spuštěný Prohlížeč potřebovat přistoupit k vašim osobním údajům, jako jsou přihlašovací jména a hesla, uložené formulářové údaje nebo osobní certifikáty.</p>
+<p>Když zadáte nové Hlavní heslo, příště ho budete muset zadat znovu až když bude znovu spuštěný Prohlížeč 
+potřebovat přistoupit k vašim osobním údajům, jako jsou přihlašovací jména a hesla nebo osobní certifikáty.</p>
 
 <p>Můžete určit, jak často bude Prohlížeč požadovat Hlavní heslo:</p>
 
@@ -213,9 +214,13 @@ mají svoje vlastní heslo.</p>
   <li>Klepněte na tlačítko Obnovit heslo.</li>
 </ol>
 
-<p><strong>Upozornění</strong>: Vymažete-li vaše Hlavní heslo, navždy ztratíte všechny zašifrované hesla uložené Správcem hesel a Správcem formulářů. Také ztratíte všechny osobní certifikáty přiřazené k <a href="glossary.xhtml#software_security_device">softwarovému bezpečnostnímu zařízení</a>.</p>
+<p><strong>Upozornění</strong>: Vymažete-li vaše Hlavní heslo, navždy ztratíte všechny zašifrované hesla
+ uložené Správcem hesel. Také ztratíte všechny osobní certifikáty přiřazené k 
+ <a href="glossary.xhtml#software_security_device">softwarovému bezpečnostnímu zařízení</a>.</p>
 
-<p>Zašifrovaná hesla a formulářové údaje se ztratí, jakmile pro ně zapnete šifrování. Informace o zapnutí a vypnutí šifrování naleznete v kapitole <a href="using_priv_help.xhtml#turning_encryption_on_and_off">Zapnutí a vypnutí šifrování citlivých informací</a>.</p>
+<p>Zašifrovaná hesla se ztratí, jakmile pro ně zapnete šifrování. Informace o zapnutí a vypnutí šifrování 
+naleznete v kapitole <a href="using_priv_help.xhtml#turning_encryption_on_and_off">Zapnutí a 
+vypnutí šifrování citlivých informací</a>.</p>
 
 <p>Pamatujete-li si svoje Hlavní heslo a rozhodnete se ho změnit, můžete to provést bez nebezpečí vymazání osobních údajů. Jakmile se zobrazí varování o vymazání Hlavního hesla a rozhodnete se heslo změnit místo vymazání, Klepněte na tlačítko Zavřít. Vrátíte se tím do panelu předvoleb Hlavního hesla a potom klepněte na tlačítko Změnit heslo. Další informace naleznete v kapitole <a href="#change_master_password">Změna hlavního hesla</a>.</p>
 
@@ -223,9 +228,9 @@ mají svoje vlastní heslo.</p>
 
 <p>Smazání hlavního hesla nezpůsobí vytvoření nového. Namísto toho odstraní všechny údaje, které staré heslo chránilo. Budete požádáni o nové Hlavní heslo, až když bude Prohlížeč potřebovat uložit nové osobní údaje.</p>
 
-<p>Po vymazání vašeho Hlavního hesla budete muset také znovu uložit osobní informace, které chcete mít předvyplněné do budoucna. Například hesla pro webové stránky a poštu ve Správci hesel.</p>
-
-<p>Také budete muset zadávat údaje ručně dokud Správce formulářů neposbírá dostatek údajů, pro  automatické vyplnění formulářů. Některé osobní certifikáty přiřazené k softwarovému bezpečnostnímu zařízení byly vymazané a vy si budete muset získat nové.</p>
+<p>Po vymazání vašeho Hlavního hesla budete muset také znovu uložit osobní informace, 
+které chcete mít předvyplněné do budoucna. Například hesla pro webové stránky a poštu ve Správci hesel. Některé 
+osobní certifikáty přiřazené k softwarovému bezpečnostnímu zařízení byly vymazané a vy si budete muset získat nové.</p>
 
 <p><strong>Poznámky pro uživatele Chytrých karet (Smart Cards)</strong>: Každá Chytrá karta má vlastní Hlavní heslo. Hlavní heslo pro Chytrou kartu chrání jen data na této kartě (např. osobní certifikáty). Heslo pro Chytrou kartu můžete normálně změnit (za předpokladu že ho znáte), ale nemůžete ho smazat.</p>
 
@@ -266,7 +271,7 @@ mají svoje vlastní heslo.</p>
   <li>Zabraňte tomu, aby vás kdokoliv při psaní hesla pozoroval.</li>               
 </ul>                                                                           
 
-<p>Copyright &copy; 2003-2007 The Mozilla Foundation.</p>
+<p>&copyright.string;</p>
 
 </body>
 </html>
