--- a/cs/suite/chrome/common/help/privacy_help.xhtml
+++ b/cs/suite/chrome/common/help/privacy_help.xhtml
@@ -11,35 +11,26 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Ochrana soukromí na Internetu</title>
-<link rel="stylesheet" href="chrome://help/locale/helpFileLayout.css"
+<link rel="stylesheet" href="helpFileLayout.css"
   type="text/css"/>
 </head>
 <body>
 
 <h1 id="using_privacy_features">Ochrana soukromí na Internetu</h1>
 
-<p>Váš Prohlížeč obsahuje řadu funkcí, které můžete použít pro vyšší zabezpečení vašich soukromých údajů. Následující kapitoly popisují, jak vám může Prohlížeč aplikace &brandShortName; pomoct spravovat cookies, hesla, formuláře a obrázky po dobu, kdy si prohlížíte webové stránky.</p>
+<p>Váš Prohlížeč obsahuje řadu funkcí, které můžete použít pro vyšší zabezpečení vašich 
+soukromých údajů. Následující kapitoly popisují, jak vám může Prohlížeč aplikace &brandShortName; 
+pomoct spravovat cookies, hesla a obrázky po dobu, kdy si prohlížíte webové stránky.</p>
 
-<p>Některé webové stánky zveřejňují pravidla soukromí podle standardu P3P. Pro informace, jak nastavit Prohlížeč podle tohoto standardu, zvolte kapitolu <a href="using_priv_help.xhtml#setting_privacy_levels">Nastavení úrovně soukromí</a>.</p>
-
-<p>Pro informace o bezpečnostních funkcích aplikace &brandShortName; zvolte kapitoly <a href="mail_sec_help.xhtml">Podepisování a šifrování e-mailů</a> a <a href="using_certs_help.xhtml">Používání certifikátů</a>.</p>
-
-<p>Pro všeobecné informace o soukromí a bezpečnosti, shlédněte on-line dokumenty:</p>
-<ul>
-  <li><a href="http://browser.netscape.com/ns8/security/basics_virus.jsp">Virus
-    protection</a> [Eng.]</li>
-  <li><a href="http://browser.netscape.com/ns8/security/basics_shopping.jsp">Online
-    shopping (and Banking)</a> [Eng.]</li>
-  <li><a href="http://browser.netscape.com/ns8/security/basics_children.jsp">Children
-    and the Internet</a> [Eng.]</li>
-</ul>
+<p>Pro informace o bezpečnostních funkcích aplikace &brandShortName; zvolte kapitoly 
+<a href="mail_sec_help.xhtml">Podepisování a šifrování e-mailů</a> a 
+<a href="using_certs_help.xhtml">Používání certifikátů</a>.</p>
 
 <div class="contentsBox">V této kapitole:
 <ul>
   <li><a href="#privacy_on_the_internet">Soukromí na Internetu</a></li>
   <li><a href="using_priv_help.xhtml#using_the_cookie_manager">Používáme Správce cookies</a></li>
   <li><a href="using_priv_help.xhtml#using_the_password_manager">Používáme Správce hesel</a></li>
-  <li><a href="using_priv_help.xhtml#using_the_form_manager">Používáme Správce formulářů</a></li>
   <li><a href="using_priv_help.xhtml#encrypting_stored_sensitive_information">Šifrování citlivých informací</a></li>
   <li><a href="using_priv_help.xhtml#managing_images">Správce obrázků</a></li>
   <li><a href="cs_priv_prefs_popup.xhtml#controlling_popups">Ovládání vyskakovacích oken</a></li>
@@ -93,17 +84,17 @@ webový Prohlížeč, aby uložil jednu nebo více takových cookies na váš pe
   
 <p>Pokud se později vrátíte na tentýž server, váš Prohlížeč mu pošle cookies, které patří danému serveru.</p>
   
-<p>Pokud používáte standardní nastavení pro cookies, pak tato činnost je pro vás neviditelná a nebudete tak vědět, kdy server ukládá cookie a kdy prohlížeč cookies posílá zpět. Můžete si však nastavit Prohlížeč tak, aby se vás zeptal dříve než cookies uloží na disk. Pro informace, jak to udělat, zvolte kapitolu <a href="using_priv_help.xhtml#setting_privacy_levels">Nastavení úrovně soukromí</a>.</p>
+<p>Pokud používáte standardní nastavení pro cookies, pak tato činnost je pro vás neviditelná 
+a nebudete tak vědět, kdy server ukládá cookie a kdy prohlížeč cookies posílá zpět. Můžete si 
+však nastavit Prohlížeč tak, aby se vás zeptal dříve než cookies uloží na disk. Pro informace, 
+jak to udělat, zvolte kapitolu 
+<a href="using_priv_help.xhtml#cookies">Soukromí &amp; zabezpečení - Cookies</a>.</p>
   
 <h3>Jak servery používají informace z cookies?</h3>
 
 <p>Cookies umožňují serveru dozvědět se o vašich předchozích návštěvách. Například jak často zjišťujete předpověď počasí pro vaši oblast, či nakupujete knihy na serveru a ten může použít cookies na zapamatování města v kterém žijete, či vašich oblíbených autorů. Vaši budoucí návštěvu potom může zjednodušit a zefektivnit.</p>
 
-<p>Mnohé servery zveřejňují pravidla soukromí, které popisují, jak bude zacházeno se získanými informacemi.</p>
-
-<p>Můžete si prohlédnout pravidla soukromí serveru, zda hovoří o informacích, které server sbírá, jak se použijí a jaké možnosti máte ohledně použití těchto informací. Pokud se chcete dozvědět, jak na to, prohlédněte si <a href="using_priv_help.xhtml#viewing_privacy_policies">Prohlížení pravidel soukromí</a>.</p>
-
-<p>Pro informace o správě cookies pomocí zveřejněných pravidel soukromí shlédněte <a href="using_priv_help.xhtml#setting_privacy_levels">Nastavení úrovně soukromí</a>.</p>
+<p>Některé servery zveřejňují pravidla soukromí, které popisují, jak bude zacházeno se získanými informacemi.</p>
 
 <h3 id="what_are_third-party_cookies">Co jsou cookies z třetí strany?</h3>
 
@@ -150,11 +141,9 @@ webový Prohlížeč, aby uložil jednu nebo více takových cookies na váš pe
 <li>Jak mohu v případě problémů nebo otázek kontaktovat správce serveru?</li>
 </ul>
 
-<p>Pro více informací o kontrolování pravidel soukromí serveru si prohlédněte <a href="using_priv_help.xhtml#viewing_privacy_policies">Prohlížení pravidel soukromí</a>.</p>
-
 <p>[<a href="#privacy_on_the_internet">Návrat na začátek kapitoly</a>]</p>
 
-<p>Copyright &copy; 2003-2007 The Mozilla Foundation.</p>
+<p>&copyright.string;</p>
 
 </body>
 </html>
