--- a/cs/suite/chrome/common/help/privsec_help.xhtml
+++ b/cs/suite/chrome/common/help/privsec_help.xhtml
@@ -12,7 +12,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Předvolby Soukromí &amp; Zabezpečení</title>
-<link rel="stylesheet" href="chrome://help/locale/helpFileLayout.css"
+<link rel="stylesheet" href="helpFileLayout.css"
   type="text/css"/>
 </head>
 
@@ -32,7 +32,6 @@
 <ul>
   <li><a href="using_priv_help.xhtml#cookies">Cookies</a></li>
   <li><a href="using_priv_help.xhtml#images">Obrázky</a></li>
-  <li><a href="using_priv_help.xhtml#forms">Formuláře</a></li>
   <li><a href="passwords_help.xhtml">Hesla</a></li>
   <li><a href="passwords_help.xhtml#master_passwords">Hlavní heslo</a></li>
   <li><a href="ssl_help.xhtml">SSL</a></li>
@@ -41,7 +40,7 @@
 </ul>
 </div>
 
-<p>Copyright &copy; 2003-2007 The Mozilla Foundation.</p>
+<p>&copyright.string;</p>
 
 </body>
 </html>
