--- a/cs/suite/chrome/common/help/profiles_help.xhtml
+++ b/cs/suite/chrome/common/help/profiles_help.xhtml
@@ -11,7 +11,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Správa profilů</title>
-<link rel="stylesheet" href="chrome://help/locale/helpFileLayout.css"
+<link rel="stylesheet" href="helpFileLayout.css"
   type="text/css"/>
 </head>
 <body>
@@ -142,7 +142,7 @@
 
 <p>[<a href="#managing_profiles">Návrat na začátek kapitoly</a>]</p>
 
-<p>Copyright &copy; 2003-2007 The Mozilla Foundation.</p>
+<p>&copyright.string;</p>
 
 </body>
 </html>
