--- a/cs/suite/chrome/common/help/shortcuts-composer.xhtml
+++ b/cs/suite/chrome/common/help/shortcuts-composer.xhtml
@@ -12,7 +12,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Klávesové zkratky Editoru</title>
-<link rel="stylesheet" href="chrome://help/locale/helpFileLayout.css"
+<link rel="stylesheet" href="helpFileLayout.css"
   type="text/css"/>
 </head>
 <body>
@@ -34,8 +34,8 @@
     <th>Linux či Unix</th>
   </tr>
 </thead>
-<tbody>
-  <tr class="even">
+<tbody class="tbody-default">
+  <tr>
     <td>Hledat na stránce</td>
     <td>Ctrl+F</td>
     <td>Cmd+F</td>
@@ -47,7 +47,7 @@
     <td>Cmd+G</td>
     <td>Ctrl+G</td>
   </tr> 
-  <tr class="even">
+  <tr>
     <td>Kontrola pravopisu</td>
     <td>Ctrl+K</td>
     <td>Cmd+K</td>
@@ -59,7 +59,7 @@
     <td>Cmd+Shift+G</td>
     <td>Ctrl+Shift+G</td>
   </tr>  
-  <tr class="even">
+  <tr>
     <td>Nastavit kurzívu</td>
     <td>Ctrl+I</td>
     <td>Cmd+I</td>
@@ -71,7 +71,7 @@
     <td>Cmd+U</td>
     <td>Ctrl+U</td>
   </tr>  
-  <tr class="even">
+  <tr>
     <td>Nastavit text s pevnou šířkou</td>
     <td>Ctrl+T</td>
     <td>Cmd+T</td>
@@ -83,7 +83,7 @@
     <td>Cmd+B</td>
     <td>Ctrl+B</td>
   </tr>    
-  <tr class="even">
+  <tr>
     <td>Nová stránka</td>
     <td>Ctrl+Shift+N</td>
     <td>Cmd+Shift+N</td>
@@ -95,7 +95,7 @@
     <td>Cmd+Shift+A</td>
     <td>Ctrl+Shift+A</td>
   </tr>  
-  <tr class="even">
+  <tr>
     <td>Otevřít soubor</td>
     <td>Ctrl+O</td>
     <td>Cmd+O</td>
@@ -107,7 +107,7 @@
     <td>Cmd+Shift+S</td>
     <td>Ctrl+Shift+S</td>
   </tr>  
-  <tr class="even">
+  <tr>
     <td>Ukončit odkaz</td>
     <td>Ctrl+Shift+K</td>
     <td>Cmd+Shift+K</td>
@@ -119,7 +119,7 @@
     <td>Cmd+Shift+T</td>
     <td>Ctrl+Shift+T</td>
   </tr>  
-  <tr class="even">
+  <tr>
     <td>Uložit stránku</td>
     <td>Ctrl+S</td>
     <td>Cmd+S</td>
@@ -137,7 +137,7 @@
     <td>Ctrl+Klepnout (přetáhnout na vybraný blok buňky nebo pokračovat klepáním na individuálně vybrané buňky)</td>
     <td>Ctrl+Klepnout (přetáhnout na vybraný blok buňky nebo pokračovat klepáním na individuálně vybrané buňky)</td>
   </tr>  
-  <tr class="even">
+  <tr>
     <td>Vybrat řádek/sloupec</td>
     <td>Ctrl+Přetáhnutí</td>
     <td>Cmd+Přetáhnutí</td>
@@ -149,7 +149,7 @@
     <td>Cmd+W</td>
     <td>Ctrl+W</td>
   </tr>  
-  <tr class="even">
+  <tr>
     <td>Zmenšit odsazení</td>
     <td>Ctrl+]</td>
     <td>Cmd+]</td>
@@ -161,7 +161,7 @@
     <td>Cmd+- (znak mínus)</td>
     <td>Ctrl+- (znak mínus)</td>
   </tr>  
-   <tr class="even">
+   <tr>
     <td>Zvětšit odsazení</td>
     <td>Ctrl+[</td>
     <td>Cmd+[</td>
@@ -176,7 +176,7 @@
 </tbody>
 </table>
 
-<p>Copyright &copy; 2003-2007 The Mozilla Foundation.</p>
+<p>&copyright.string;</p>
 
 </body>
 </html>
