--- a/cs/suite/chrome/common/help/shortcuts-navigator.xhtml
+++ b/cs/suite/chrome/common/help/shortcuts-navigator.xhtml
@@ -12,7 +12,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>Klávesové zkratky Prohlížeče</title>
-<link rel="stylesheet" href="chrome://help/locale/helpFileLayout.css"
+<link rel="stylesheet" href="helpFileLayout.css"
   type="text/css"/>
 </head>
 <body>
@@ -47,14 +47,14 @@
     <th>Linux nebo Unix</th>
   </tr>
 </thead>
-<tbody>
+<tbody class="tbody-default">
   <tr>
     <td>Otevřít okno Správce záložek</td>
     <td>Ctrl+B</td>
     <td>Cmd+B</td>
     <td>Ctrl+B</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Přidat webovou stránku do záložek</td>
     <td>Ctrl+Shift+D</td>
     <td>Cmd+Shift+D</td>
@@ -66,7 +66,7 @@
     <td>Cmd+D</td>
     <td>Ctrl+D</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Seřadit složku (seřadí složku v okně Správce záložek)</td>
     <td>Ctrl+S</td>
     <td>Cmd+S</td>
@@ -78,7 +78,7 @@
     <td>Cmd+N</td>
     <td>Ctrl+N</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Vlastnosti záložky (po výběru záložky ve Správci záložek)
     </td>
     <td>Ctrl+I</td>
@@ -105,14 +105,14 @@
     <th>Linux nebo Unix</th>
   </tr>
 </thead>
-<tbody>
+<tbody class="tbody-default">
   <tr>
     <td>Otevřít okno Historie</td>
     <td>Ctrl+H</td>
     <td>Cmd+Shift+H</td>
     <td>Ctrl+H</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Aktualizovat</td>
     <td>Ctrl+R</td>
     <td>Cmd+R</td>
@@ -124,7 +124,7 @@
     <td>Cmd+Shift+R</td>
     <td>Ctrl+Shift+R</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Zpět</td>
     <td>Alt+Šipka vlevo, Cmd+[ nebo Backspace</td>
     <td>Cmd+Šipka vlevo nebo Ctrl+[</td>
@@ -136,7 +136,13 @@
     <td>Cmd+Šipka vpravo nebo Ctrl+]</td>
     <td>Alt+Šipka vpravo</td>
   </tr>
-  <tr class="even">
+  <tr>
+    <td>Výše</td>
+    <td>Alt+Šipka nahoru</td>
+    <td>Opt+Šipka nahoru</td>
+    <td>Alt+Šipka nahoru</td>
+  </tr>
+  <tr>
     <td>Stopnout</td>
     <td>Esc</td>
     <td>Cmd+. nebo Esc</td>
@@ -148,7 +154,7 @@
     <td>Cmd+Home</td>
     <td>Alt+Home</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Přejít na konec stránky</td>
     <td>End</td>
     <td></td>
@@ -160,7 +166,7 @@
     <td>Home</td>
     <td>Home</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Vybrat všechen text v adresním řádků</td>
     <td>Ctrl+L nebo Alt+D</td>
     <td>Cmd+L</td>
@@ -172,7 +178,7 @@
     <td>Cmd+Shift+L</td>
     <td>Ctrl+Shift+L</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Otevřít vybraný odkaz</td>
     <td>Enter</td>
     <td>Return</td>
@@ -184,7 +190,7 @@
     <td>Cmd+Shift+S</td>
     <td>Ctrl+Shift+S</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Přesunout na další rám (na webových stránkách používající rámy)</td>
     <td>F6</td>
     <td>Ctrl+Tab nebo F6 (jestliže klávese F6 není přiřazen jiný příkaz)</td>
@@ -196,7 +202,7 @@
     <td>Ctrl+Shift+Tab nebo Shift+F6 (jestliže klávese F6 není přiřazen jiný příkaz)</td>
     <td>Shift+F6</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Otevřít nové okno Prohlížeče</td>
     <td>Ctrl+N</td>
     <td>Cmd+N</td>
@@ -208,7 +214,7 @@
     <td>Tab/Shift+Tab</td>
     <td>Tab/Shift+Tab</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Otevřít soubor</td>
     <td>Ctrl+O</td>
     <td>Cmd+O</td>
@@ -220,22 +226,22 @@
     <td>Cmd+W</td>
     <td>Ctrl+W</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Zavřít okno</td>
     <td>Ctrl+Shift+W</td>
     <td>Cmd+Shift+W</td>
     <td>Ctrl+Shift+W</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Uložit stránku jako</td>
     <td>Ctrl+S</td>
     <td>Cmd+S</td>
     <td>Ctrl+S</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Uložit odkaz (až když odkaz je vybrán)</td>
     <td>Shift+Enter</td>
-    <td>Option+Return</td>
+    <td>Opt+Return</td>
     <td>Shift+Enter</td>
   </tr>
   <tr>
@@ -244,7 +250,7 @@
     <td>Cmd+E</td>
     <td>Ctrl+E</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Vytisknout stránku</td>
     <td>Ctrl+P</td>
     <td>Cmd+P</td>
@@ -256,7 +262,7 @@
     <td>Page Up nebo Shift+Mezerník</td>
     <td>Page Up, Shift+Mezerník nebo Backspace</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Přejít o jednu stránku dolů</td>
     <td>Page Down nebo Mezerník</td>
     <td>Page Down nebo Mezerník</td>
@@ -268,7 +274,7 @@
     <td>Šipka nahoru</td>
     <td>Šipka nahoru</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Přejít o jeden řádek dolů</td>
     <td>Šipka dolů</td>
     <td>Šipka dolů</td>
@@ -300,14 +306,14 @@
     <th>Linux nebo Unix</th>
   </tr>
 </thead>
-<tbody>
+<tbody class="tbody-default">
   <tr>
     <td>Celá obrazovka</td>
     <td>F11</td>
     <td></td>
     <td>F11 (záleží na použitém okenním správci)</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Zmenšit text</td>
     <td>Ctrl+- (znak mínus)</td>
     <td>Cmd+- (znak mínus)</td>
@@ -319,7 +325,7 @@
     <td>Cmd++ (znak plus)</td>
     <td>Ctrl++ (znak plus)</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Původní velikost (100%)</td>
     <td>Ctrl+0</td>
     <td>Cmd+0</td>
@@ -331,7 +337,7 @@
     <td>Cmd+I</td>
     <td>Ctrl+I</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Ukázat zdrojový kód stránky</td>
     <td>Ctrl+U</td>
     <td>Cmd+U</td>
@@ -357,14 +363,14 @@
     <th>Linux nebo Unix</th>
   </tr>
 </thead>
-<tbody>
+<tbody class="tbody-default">
   <tr>
     <td>Nový panel prohlížeče</td>
     <td>Ctrl+T</td>
     <td>Cmd+T</td>
     <td>Ctrl+T</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Přejít na další panel (jestliže používáte panelové prohlížení s více jak jedním panelem)</td>
     <td>Ctrl+Tab nebo Ctrl+Page Down</td>
     <td>Cmd+Opt+Šipka doprava nebo Ctrl+Page Down</td>
@@ -376,7 +382,7 @@
     <td>Cmd+Opt+Šipka doleva nebo Ctrl+Page Up</td>
     <td>Ctrl+Page Up</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Zavřít panel (zavře okno jestliže je otevřen pouze jeden panel)</td>
     <td>Ctrl+W</td>
     <td>Cmd+W</td>
@@ -388,7 +394,7 @@
     <td>Cmd+Šipka vlevo or Cmd+Šipka nahoru</td>
     <td>Ctrl+Šipka vlevo or Ctrl+Šipka nahoru</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Přesunout panel vpravo (když je panel aktivní)</td>
     <td>Ctrl+Šipka vpravo or Ctrl+Šipka dolů</td>
     <td>Cmd+Šipka vpravo or Cmd+Šipka dolů</td>
@@ -400,27 +406,33 @@
     <td>Cmd+Home</td>
     <td>Ctrl+Home</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Přesunout panel na konec (když je panel aktivní)</td>
     <td>Ctrl+End</td>
     <td>Cmd+End</td>
     <td>Ctrl+End</td>
   </tr>
   <tr>
-    <td>Otevřít odkaz v novém panelu na popředí</td>
-    <td>Insert</td>
+    <td>Otevřít odkaz v novém panelu na popředí (když je panel aktivní)</td>
+    <td>Insert (nebo Shift+Insert) *</td>
     <td></td>
-    <td>Insert</td>
+    <td>Insert (nebo Shift+Insert) *</td>
   </tr>
   <tr>
-    <td>Otevřít odkaz v novém panelu na pozadí</td>
-    <td>Shift+Insert</td>
+    <td>Otevřít odkaz v novém panelu na pozadí (když je panel aktivní)</td>
+    <td>Shift+Insert (nebo Insert) *</td>
     <td></td>
-    <td>Shift+Insert</td>
+    <td>Shift+Insert (nebo Insert) *</td>
   </tr>
 </tbody>
 </table>
 
+<p>*<!--translate--> Shortcuts in parentheses apply when the 
+  <a href="cs_nav_prefs_navigator.xhtml#tabbed_browsing"> Switch to new tabs
+  opened from links</a> setting is disabled. Depending on the 
+  <a href="cs_nav_prefs_navigator.xhtml#tabbed_browsing"> Open tabs instead 
+  of windows</a> settings, more keys might be available.<!--end translate--></p>
+  
 <h2 id="sidebar_shortcuts">Klávesové zkratky Postranní lišty</h2>
 
 <table class="defaultTable">
@@ -438,23 +450,23 @@
     <th>Linux nebo Unix</th>
   </tr>
 </thead>
-<tbody>
+<tbody class="tbody-default">
   <tr>
     <td>Otevřít / zavřít Postranní lištu</td>
     <td>F9</td>
     <td/>
     <td>F9</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Přejít na další Postranní lištu</td>
     <td>Alt+Page Down</td>
-    <td>Option+Page Down</td>
+    <td>Opt+Page Down</td>
     <td>Alt+Page Down</td>
   </tr>
   <tr>
     <td>Přejít na minulou Postranní lištu</td>
     <td>Alt+Page Up</td>
-    <td>Option+Page Up</td>
+    <td>Opt+Page Up</td>
     <td>Alt+Page Up</td>
   </tr>
 </tbody>
@@ -477,14 +489,14 @@
     <th>Linux nebo Unix</th>
   </tr>
 </thead>
-<tbody>
+<tbody class="tbody-default">
   <tr>
     <td>Přesunout k další / minulé položce formuláře</td>
     <td>Tab/Shift+Tab</td>
     <td>Tab/Shift+Tab</td>
     <td>Tab/Shift+Tab</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Odeslat formulář</td>
     <td>Enter</td>
     <td>Return</td>
@@ -496,7 +508,7 @@
     <td>Mezerník</td>
     <td>Mezerník</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Vybrat položku ze seznamu</td>
     <td>Šipka nahoru, Šipka dolů nebo první písmeno z jména položky</td>
     <td>Šipka nahoru, Šipka dolů nebo první písmeno z jména položky</td>
@@ -508,16 +520,16 @@
     <td>Mezerník</td>
     <td>Mezerník</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Otevřít rozbalovací seznam</td>
     <td>Alt+Šipka dolů</td>
-    <td>Option+Šipka dolů</td>
+    <td>Opt+Šipka dolů</td>
     <td>Alt+Šipka dolů</td>
   </tr>
 </tbody>
 </table>
 
-<p>Copyright &copy; 2003-2007 The Mozilla Foundation.</p>
+<p>&copyright.string;</p>
 
 </body>
 </html>
