--- a/cs/suite/chrome/common/help/shortcuts.xhtml
+++ b/cs/suite/chrome/common/help/shortcuts.xhtml
@@ -12,7 +12,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Klávesové zkratky aplikace &brandShortName;</title>
-<link rel="stylesheet" href="chrome://help/locale/helpFileLayout.css"
+<link rel="stylesheet" href="helpFileLayout.css"
   type="text/css"/>
 </head>
 <body>
@@ -51,7 +51,7 @@
     <th>Linux nebo Unix</th>
   </tr>
 </thead>
-<tbody>
+<tbody class="tbody-default">
   <tr>
     <td>Kopírovat</td>
     <td>Ctrl+C</td>
@@ -91,14 +91,14 @@
     <th>Linux nebo Unix</th>
   </tr>
 </thead>
-<tbody>
+<tbody class="tbody-default">
   <tr>
     <td>Kopírovat</td>
     <td>Ctrl+C</td>
     <td>Cmd+C</td>
     <td>Ctrl+C</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Pohyb o řádek nahoru</td>
     <td>Šipka nahoru</td>
     <td>Šipka nahoru</td>
@@ -110,7 +110,7 @@
     <td>Page Down</td>
     <td>Page Down</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Pohyb o řádek dolů</td>
     <td>Šipka dolů</td>
     <td>Šipka dolů</td>
@@ -122,7 +122,7 @@
     <td>Page Up</td>
     <td>Page Up</td>
   </tr>  
-  <tr class="even">
+  <tr>
     <td>Smazat následující slovo</td>
     <td>Ctrl+Del</td>
     <td></td>
@@ -134,7 +134,7 @@
     <td>Cmd+V</td>
     <td>Ctrl+V</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Najít</td>
     <td>Ctrl+F</td>
     <td>Cmd+F</td>
@@ -146,7 +146,7 @@
     <td>Cmd+G</td>
     <td>Ctrl+G</td>
   </tr>  
-  <tr class="even">
+  <tr>
     <td>Najít odkaz při psaní</td>
     <td>&apos; (znak apostrof)</td>
     <td>&apos; (znak apostrof)</td>
@@ -158,7 +158,7 @@
     <td>/</td>
     <td>/</td>
   </tr>  
-  <tr class="even">
+  <tr>
     <td>Otevřít hlavní nabídku <span class="noMac"> (přepne na nabídku ve vrchní části okna)</span>
     </td>
     <td>Alt nebo F10</td>
@@ -171,7 +171,7 @@
     <td>Ctrl+Space</td>
     <td>Shift+F10</td>
   </tr>  
-  <tr class="even">
+  <tr>
     <td>Přesun na konec řádku (při editaci textu)</td>
     <td>End</td>
     <td>Cmd+Šipka doprava</td>
@@ -183,7 +183,7 @@
     <td>Cmd+Šipka doleva</td>
     <td>Ctrl+A</td>
   </tr>  
-  <tr class="even">
+  <tr>
     <td>Spuštění Adresáře</td>
     <td>Ctrl+5</td>
     <td>Cmd+5</td>
@@ -195,16 +195,22 @@
     <td>Cmd+4</td>
     <td>Ctrl+4</td>
   </tr>  
-  <tr class="even">
+  <tr>
     <td>Spuštění IRC Chatu (Chatzilly)</td>
     <td>Ctrl+6</td>
     <td>Cmd+6</td>
     <td>Ctrl+6</td>
   </tr>  
+    <tr>
+    <td>Otevření chybové konzole</td>
+    <td>Ctrl+Shift+J</td>
+    <td>Cmd+Shift+J</td>
+    <td>Ctrl+Shift+J</td>
+  </tr>
   <tr>
     <td>Otevření okna nápovědy</td>
     <td>F1</td>
-    <td>Cmd+? nebo klávesa nápovědy</td>
+    <td>Cmd+?</td>
     <td>F1</td>
   </tr>  
   <tr>
@@ -213,7 +219,7 @@
     <td>Cmd+2</td>
     <td>Ctrl+2</td>
   </tr>  
-  <tr class="even">
+  <tr>
     <td>Spuštění Prohlížeče</td>
     <td>Ctrl+1</td>
     <td>Cmd+1</td>
@@ -225,7 +231,7 @@
     <td>Cmd+A</td>
     <td>Alt+A</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Vyjmout</td>
     <td>Ctrl+X</td>
     <td>Cmd+X</td>
@@ -237,7 +243,7 @@
     <td>Cmd+Q</td>
     <td>Ctrl+Q</td>
   </tr>  
-  <tr class="even">
+  <tr>
     <td>Zavřít okno</td>
     <td>Ctrl+W</td>
     <td>Cmd+W</td>
@@ -249,7 +255,7 @@
     <td>Cmd+Shift+Z</td>
     <td>Ctrl+Y nebo Ctrl+Shift+Z</td>
   </tr>  
-  <tr class="even">
+  <tr>
     <td>Zpět</td>
     <td>Ctrl+Z</td>
     <td>Cmd+Z</td>
@@ -277,14 +283,14 @@
     <th>Linux nebo Unix</th>
   </tr>
 </thead>
-<tbody>
+<tbody class="tbody-default">
   <tr>
     <td>Přechod mezi odkazy v okně nápovědy (pravý panel okna)</td>
     <td>Tab</td>
     <td>Tab</td>
     <td>Tab</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Přechod mezi oknem nápovědy a panely nápovědy Obsah/Hledat/Rejstřík a Slovník</td>
     <td>F6</td>
     <td>F6</td>
@@ -296,7 +302,7 @@
     <td>Šipka nahoru/dolů</td>
     <td>Šipka nahoru/dolů</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Pohybuje s obsahem okna (okno nápovědy, Obsah, nebo Rejstřík)</td>
     <td>Šipka nahoru/dolů</td>
     <td>Šipka nahoru/dolů</td>
@@ -308,7 +314,7 @@
     <td>Šipka vlevo/vpravo</td>
     <td>Šipka vlevo/vpravo</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Tisk stránky</td>
     <td>Ctrl+P</td>
     <td>Cmd+P</td>
@@ -320,7 +326,7 @@
     <td>Cmd+Šipka vlevo</td>
     <td>Alt+Šipka vlevo</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Přechod na následující stránku</td>
     <td>Alt+Šipka vpravo</td>
     <td>Cmd+Šipka vpravo</td>
@@ -329,7 +335,7 @@
 </tbody>
 </table>
 
-<p>Copyright &copy; 2003-2007 The Mozilla Foundation.</p>
+<p>&copyright.string;</p>
 
 </body>
 </html>
