--- a/cs/suite/chrome/common/help/using_certs_help.xhtml
+++ b/cs/suite/chrome/common/help/using_certs_help.xhtml
@@ -11,7 +11,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Používání certifikátů</title>
-<link rel="stylesheet" href="chrome://help/locale/helpFileLayout.css"
+<link rel="stylesheet" href="helpFileLayout.css"
   type="text/css"/>
 </head>
 <body>
@@ -53,8 +53,9 @@ osobních informací, a automatické stažení certifikátu do vašeho prohlíž
 může být získání certifikátu složitější.</p>
 
 <p>Certifikát můžete dnes získat návštěvou URL certifikační autority a postupováním podle
-zobrazovaných instrukcí. Seznam certifikačních autorit viz online 
-dokument <a href="https://certs.netscape.com/">Klientské certifikáty</a> [Eng.].</p>
+zobrazovaných instrukcí. Seznam uznávaných certifikačních autorit aplikací &brandShortName;, viz online 
+dokument <a href="http://www.mozilla.org/projects/security/certs/included/">Included
+  Certificate List</a> [Eng.].</p>
 
 <p>Jakmile získáte certifikát, je automaticky uložen v <a href="glossary.xhtml#security_device">Bezpečnostním zařízení</a>. 
 Váš Prohlížeč obsahuje vestavěné softwarové bezpečnostní zařízení. Bezpečnostní zařízení
@@ -83,17 +84,17 @@ vašeho počítače:</p>
 <table summary="lock icons">
   <tr>
     <td><img alt="Ikona Uzavřený zámek"
-      src="chrome://communicator/skin/icons/lock-secure.gif"/></td>
+      src="chrome://communicator/skin/icons/lock-secure.png"/></td>
     <td>Uzavřený zámek znamená, že stránka byla zabezpečena šifrováním během přenosu.</td>
   </tr>
   <tr>
     <td><img alt="Ikona Otevřený zámek"
-      src="chrome://communicator/skin/icons/lock-insecure.gif"/></td>
+      src="chrome://communicator/skin/icons/lock-insecure.png"/></td>
     <td>Otevřený zámek znamená, že stránka nebyla zabezpečena šifrováním během přenosu.</td>
   </tr>
   <tr>
     <td><img alt="Ikona Zlomený zámek"
-      src="chrome://communicator/skin/icons/lock-broken.gif"/></td>
+      src="chrome://communicator/skin/icons/lock-broken.png"/></td>
     <td>Zlomený zámek znamená, že některé nebo všechny části uvnitř stránky nebyly zabezpečeny šifrováním během přenosu, přestože HTML stránka byla zašifrována.</td>
   </tr>
 </table>
@@ -609,7 +610,7 @@ Ověřování získáte tak, že:</p>
 
 <p>[<a href="#controlling_validation">Návrat na začátek kapitoly</a>]</p>
 
-<p>Copyright &copy; 2003-2007 The Mozilla Foundation.</p>
+<p>&copyright.string;</p>
 
 </body>
 </html>
