--- a/cs/suite/chrome/common/help/shortcuts-mailnews.xhtml
+++ b/cs/suite/chrome/common/help/shortcuts-mailnews.xhtml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
-  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"[
+  <!ENTITY % brandDTD SYSTEM "chrome://branding/locale/brand.dtd" >
+  <!ENTITY % regionDTD SYSTEM "chrome://global-region/locale/region.dtd" >
+  %brandDTD;
+  %regionDTD;
+]>
+
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Klávesové zkratky Pošty &amp; Diskusních skupin</title>
-<link rel="stylesheet" href="chrome://help/locale/helpFileLayout.css"
-  type="text/css"/>
+<link rel="stylesheet" type="text/css" href="helpFileLayout.css"/>
 </head>
 <body>
 
@@ -38,7 +43,7 @@
     <th>Linux or Unix</th>
   </tr>
 </thead>
-<tbody>
+<tbody class="tbody-default">
   <tr class="even">
     <td>Hledat ve zprávách</td>
     <td>Ctrl+Shift+F</td>
@@ -51,7 +56,7 @@
     <td>Cmd+Shift+M</td>
     <td>Ctrl+M</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Přesunout na další prvek Pošty (složka, vyhledávání, vlákno, poštovní účet, atd.)</td>
     <td>F6</td>
     <td>F6</td>
@@ -63,7 +68,7 @@
     <td>Cmd+T</td>
     <td>Ctrl+T</td>
   </tr>  
-  <tr class="even">
+  <tr>
     <td>Vyzvednout všechny nové zprávy</td>
     <td>Ctrl+Shift+T</td>
     <td>Cmd+Shift+T</td>
@@ -101,7 +106,7 @@
     <th>Linux nebo Unix</th>
   </tr>
 </thead>
-<tbody>
+<tbody class="tbody-default">
   <tr class="even">
     <td>Obnovit smazanou zprávu</td>
     <td>Ctrl+Z</td>
@@ -114,7 +119,7 @@
     <td>Cmd+R</td>
     <td>Ctrl+R</td>
   </tr>  
-  <tr class="even">
+  <tr>
    <td>Odpovědět všem na zprávu (odesílateli a všem ostatním ve zprávě)</td>
    <td>Ctrl+Shift+R</td>
    <td>Cmd+Shift+R</td>
@@ -126,7 +131,7 @@
     <td>Shift+Del</td>
     <td>Shift+Del</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Otevřít zprávu (v novém okně)</td>
     <td>Ctrl+O</td>
     <td>Cmd+O</td>
@@ -138,7 +143,7 @@
     <td>R</td>
     <td>R</td>
   </tr>  
-  <tr class="even">
+  <tr>
     <td>Označit vlákno jako přečtené a přesunout na další nepřečtenou zprávu</td>
     <td>T</td>
     <td>T</td>
@@ -148,9 +153,9 @@
     <td>Označit všechny zprávy v označeném adresáři jako přečtené</td>
     <td>Ctrl+Shift+C</td>
     <td>Cmd+Shift+C</td>
-    <td>Ctrl+Shift+M</td>
+    <td>Ctrl+Shift+C</td>
   </tr>  
-  <tr class="even">
+  <tr>
     <td>Označit zprávu jako nevyžádanou</td>
     <td>J</td>
     <td>J</td>
@@ -162,7 +167,7 @@
     <td>Shift+J</td>
     <td>Shift+J</td>
   </tr>  
-  <tr class="even">
+  <tr>
     <td>Označit zprávu jako přečtenou</td>
     <td>M</td>
     <td>M</td>
@@ -174,7 +179,7 @@
     <td>C</td>
     <td>C</td>
   </tr>  
-  <tr class="even">
+  <tr>
     <td>Přechod na další zprávu</td>
     <td>F</td>
     <td>F</td>
@@ -192,13 +197,13 @@
     <td>I</td>
     <td>I</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Označit zprávu jako nepodvodnou</td>
     <td>Shift+P</td>
     <td>Shift+P</td>
     <td>Shift+P</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Přechod na další rozepsanou zprávu</td>
     <td>N</td>
     <td>N</td>
@@ -210,7 +215,7 @@
     <td>B</td>
     <td>B</td>
   </tr>    
-  <tr class="even">
+  <tr>
     <td>Přechod na předchozí rozepsanou zprávu</td>
     <td>P</td>
     <td>P</td>
@@ -222,7 +227,7 @@
     <td>Cmd+L</td>
     <td>Ctrl+L</td>
   </tr>  
-  <tr class="even">
+  <tr>
     <td>Rozvinout všechny vlákna</td>
     <td>\ (znak zpětné lomítko)</td>
     <td>\ (znak zpětné lomítko)</td>
@@ -234,13 +239,13 @@
     <td>Cmd+S</td>
     <td>Ctrl+S</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Upravit jako novou (vytvoří nový email a použije text z vybrané zprávy)</td>
     <td>Ctrl+E</td>
     <td>Cmd+E</td>
     <td>Ctrl+E</td>
   </tr>  
-  <tr class="even">
+  <tr>
     <td>Odstranit štítek</td>
     <td>0</td>
     <td>0</td>
@@ -258,7 +263,7 @@
     <td>Cmd+Shift+A</td>
     <td>Alt+Shift+A</td>
   </tr>  
-   <tr class="even">
+   <tr>
     <td>Vybrat všechny zprávy</td>
     <td>Ctrl+A</td>
     <td>Cmd+A</td>
@@ -270,7 +275,7 @@
     <td>Del</td>
     <td>Del</td>
   </tr>  
-  <tr class="even">
+  <tr>
     <td>Zabalit všechny vlákna</td>
     <td>* (znak hvězdička)</td>
     <td>* (znak hvězdička)</td>
@@ -302,8 +307,8 @@
     <th>Linux nebo Unix</th>
   </tr>
 </thead>
-<tbody>
-  <tr class="even">
+<tbody class="tbody-default">
+  <tr>
     <td>Odeslat zprávu nyní</td>
     <td>Ctrl+Enter</td>
     <td>Cmd+Return</td>
@@ -315,16 +320,22 @@
     <td>Cmd+Shift+Return</td>
     <td>Ctrl+Shift+Enter</td>
   </tr>
-  <tr class="even">
-    <td>Vložit jako citaci</td>
+  <tr>
+    <td>Vložit bez formátování</td>
     <td>Ctrl+Shift+V</td>
     <td>Cmd+Shift+V</td>
     <td>Ctrl+Shift+V</td>
   </tr>  
+  <tr>
+    <td>Zalomit</td>
+    <td>Ctrl+R</td>
+    <td>Cmd+R</td>
+    <td>Ctrl+R</td>
+  </tr>
 </tbody>
 </table>
 
-<p>Copyright &copy; 2003-2007 The Mozilla Foundation.</p>
+<p>&copyright.string;</p>
 
 </body>
 </html>
