--- a/cs/suite/chrome/common/help/validation_help.xhtml
+++ b/cs/suite/chrome/common/help/validation_help.xhtml
@@ -11,7 +11,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Nastavení ověřování platnosti</title>
-<link rel="stylesheet" href="chrome://help/locale/helpFileLayout.css"
+<link rel="stylesheet" href="helpFileLayout.css"
   type="text/css"/>
 </head>
 <body>
@@ -40,7 +40,8 @@ Zabezpečení - Ověřování</a></li>
 nemáte podkategorii zobrazenu, proveďte následující kroky:</p>
 
 <ol>
-  <li>Otevřete nabídku <span class="mac">&brandShortName;</span> <span class="noMac">Úpravy</span> a klepněte na položku Předvolby.</li>
+  <li>Otevřete nabídku <span class="mac">&brandShortName;</span> 
+  <span class="noMac">Úpravy</span> a klepněte na položku Předvolby.</li>
   <li>V kategorii Soukromí &amp; Zabezpečení klepněte na podkategorii Ověřování.
 (Pokud nevidíte žádnou podkategorii, dvojklepnutím na
 Soukromí &amp; Zabezpečení zobrazíte jejich seznam.)</li>
@@ -67,41 +68,43 @@ tlačítko Správa seznamu CRL.</p>
 umožňuje Správci certifikátů online kontrolovat platnost certifikátu
 při každém prohlížení nebo použití tohoto certifikátu. Tento proces
 zahrnuje konfrontaci certifikátu se seznamem uložených certifikátů CRL
-udržovaným příslušnou webovou stránkou. Aby OCSP fungovalo, musí být
+udržované příslušným serverem. Aby OCSP fungovalo, musí být
 počítač online.</p>
 
 <p>Pro upřesnění použití OCSP Správcem certifikátů vyberte jednu z
 následujících možností nastavení v sekci OCSP v podkategorii Ověřování:</p>
 
 <ul>
-  <li><strong>Nepoužívat OCSP pro ověřování platnosti certifikátů</strong>: Vyberte tuto možnost, nechcete-li, aby Správce certifikátů prováděl
-online kontrolu stavu při každém ověřování certifikátu. Místo toho,
-kdykoli Správce certifikátů provádí <a href="glossary.xhtml#certificate_verification">Ověření certifikátu</a>, pouze potvrdí dobu platnosti certifikátu a zkontroluje, zda je správně
-podepsán Certifikační autoritou, jejíž vlastní CA certifikát je uveden
-na panelu CA certifikátů (v hlavním okně Správce certifikátů) a zároveň
-je vedena jako důvěryhodná pro vydání daného druhu certifikátu.</li>
-  <li><strong>Používat OCSP pro ověření platnosti pouze těch certifikátů,
-které obsahují adresu služby OCSP</strong>: Vyberte tuto možnost, chcete-li,
-aby Správce certifikátů provedl online kontrolu stavu při každém
-ověřování certifikátu, který určuje adresu URL pouze pro kontrolu.
-Pokud je URL adresa určena certifikátem, Správce certifikátů se ujistí,
-že certifikát je veden jako platný a provede kontrolu doby platnosti a
-nastavení důvěryhodnosti.</li>
-  <li><strong>Používat OCSP pro ověření platnosti všech certifikátů a
-používat tuto adresu podepisovatele</strong>: Vyberte tuto možnost,
-chcete-li, aby Správce certifikátů provedl online kontrolu stavu při
-každém ověření certifikátu. Pokud zvolíte toto nastavení, měli byste
-také vybrat certifikát z rozbalovacího seznamu Podepisovatel odpovědi, který
-identifikuje podepisovatele odpovědi OCSP. S tímto nastavením, pouze
-certifikáty, které Správce certifikátů rozpozná jako takové, které je
-možno ověřit odpovědí OCSP podepsanou certifikátem Podepisovatele
-odpovědi (nebo podepsány s použitím certifikátu, jenž na něj navazuje
-/v originálu chain/).
+   <li><strong>Používat protokol pro online ověření certifikátů 
+   (OCSP) k ověření platnosti certifikátů</strong>: <!--translate-->Select this setting if you want
+    Certificate Manager to perform an online status check each time it verifies
+    a certificate. If this setting is off, Certificate Manager will only
+    confirm the certificate&apos;s validity period and that it is correctly
+    signed by a CA whose own CA certificate is both listed under the CA
+    Certificates tab (in the main Certificate Manager window) and marked as
+    trusted for issuing that kind of certificate.</li>
+  <li><strong>Ověřovat certifikáty, které mají zadán OCSP server</strong>:
+    Select this setting for online validation of certificates that provides a
+    validation service address (Service URL). Certificate Manager makes sure
+    that the certificate is listed as valid at the URL and checks validity
+    period and trust settings.</li>
+
+  <li><strong>Ověřovat všechny certifikáty pomocí tohoto OSCP
+    serveru</strong>: Select this setting if you want to specify a OCSP server
+    for the validation of all certificates. If you select this setting, you
+    should also choose the certificate from the Response Signer pop-up menu
+    that identifies the signer of the OCSP responses. With this setting, the
+    only certificates Certificate Manager recognizes are those that can be
+    verified by an OCSP response signed with the Response Signer certificate
+    (or signed using a certificate that chains to it).
 
     <p>Pokud vybíráte certifikát Podepisovatele odpovědi z rozbalovacího seznamu, Správce certifikátů vyplní editační pole Adresa služby automaticky. Pokud
 není editační pole Adresa služby vyplněn automaticky, musíte ji uvést sami.
 Podrobnosti vám sdělí správce vašeho systému.</p>
 
+  <li><strong>Pokud se připojení k  OCSP serveru nezdaří, považovat certifikát
+    za neplatný</strong>: Select this if you want the validation to fail if a
+    connection to the OCSP server can&apos;t be established.<!--end translate--></li>
   </li>
 </ul>
 
@@ -241,7 +244,7 @@ odpovídající počtu nezdarů a chybová zpráva pro poslední nezdar.</li>
 
 <p>Klepněte na tlačítko OK pro potvrzení vašich změn.</p>
 
-<p>Copyright &copy; 2003-2007 The Mozilla Foundation.</p>
+<p>&copyright.string;</p>
 
 </body>
 </html>
