--- a/cs/suite/chrome/common/help/welcome_help.xhtml
+++ b/cs/suite/chrome/common/help/welcome_help.xhtml
@@ -11,7 +11,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Nápověda &brandShortName;</title>
-<link rel="stylesheet" href="chrome://help/locale/helpFileLayout.css"
+<link rel="stylesheet" href="helpFileLayout.css"
   type="text/css"/>
 </head>
 <body>
@@ -32,7 +32,7 @@ panel či téma v levé části okna</strong>:</p>
 
 <p>Pro více informací o používání nápovědy &brandShortName; nahlédněte
 do kapitoly 
-<a href="chrome://help/locale/help_help.xhtml">Jak používat nápovědu</a>.</p>
+<a href="help_help.xhtml">Jak používat nápovědu</a>.</p>
 
 <table width="100%" border="0">
   <tr valign="top">
@@ -75,9 +75,19 @@ do kapitoly
     <p>Přidejte si nový motiv vzhledu, postranní lištu či vyhledávací modul.</p>
     </td>
   </tr>
+  
+   <tr valign="top">
+    <td colspan="2"><h2><!--translate-->User Feedback</h2></td>
+  </tr>
+  <tr>
+    <td>
+      <p><strong><a href="http://www.mozilla.org/quality/qfa.html">Quality
+        Feedback Agent<!--end translate--></a> [Eng.]</strong></p>
+    </td>
+  </tr>
   </table>
   
-<p>Copyright &copy; 2003-2007 The Mozilla Foundation.</p>
+<p>&copyright.string;</p>
 
 </body>
 </html>
